Fixed links to images and files

--- a/content/blog/2012/2012-06-11_rstblog.rst
+++ b/content/blog/2012/2012-06-11_rstblog.rst
@@ -64,7 +64,7 @@ To easily publish content, I use `Fabric <http://fabfile.org/>`_ and `rsync
     from fabric.api import local, env
     from fabric.contrib.project import rsync_project
 
-    env.hosts = ['ich-wars-nicht.ch']
+    env.hosts = ['dbrgn.ch']
     env.path = '/var/www/dbrgn/blog/'
 
     def push():
